daatset heart_Classification comentarios corregidos -WORK --CONTROL-COMMIT

--- a/TRANSFORMER-HEART_CLASSIFICATION/heartClassificationTabPFN.ipynb
+++ b/TRANSFORMER-HEART_CLASSIFICATION/heartClassificationTabPFN.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Heart Diseases,a classification problem"
+    "## Clasificación de dataset con problemas de corazón usando algoritmos Transformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este dataset está sacado de kaggle, en este enlace lo puedes encontrar --> <a href=\"https://www.kaggle.com/datasets/johnsmith88/heart-disease-dataset\">Heart Disease Dataset</a>"
    ]
   },
   {
@@ -208,49 +215,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, out dataset contains near 1200 entries of people with or withoud heart disease depending on their :\n",
-    "- age                   ( years )\n",
-    "- sex                   ( \n",
-    "                            1 -> male ,\n",
-    "                            0 -> female )\n",
-    "- chest pain type       ( \n",
-    "                            1 -> Typical Angina,\n",
-    "                            2 -> Atypical Angina,\n",
-    "                            3 -> Non-anginal pain,\n",
-    "                            4 -> Asymptomatic )\n",
-    "- resting bd/s          ( mmHg )\n",
-    "- cholesterol           ( mg/dl )\n",
-    "- fasting blood sugar   ( \n",
-    "                            fasting blood sugar > 120 mg/dl, \n",
-    "                            1 -> True,\n",
-    "                            0 -> False\n",
-    "                        )\n",
-    "- resting ecg           (\n",
-    "                            0 -> Normal\n",
-    "                            1 -> T wave inversions and\\or ST elevation > 0.05 mV,\n",
-    "                            2 -> Probable or Definite left ventricular hypertrophy by Estes criteria\n",
-    "                        )\n",
-    "- max heart rate        ( [71- 202] )\n",
-    "- exercise angina       ( \n",
-    "                            1 -> Yes\n",
-    "                            0 -> No \n",
-    "                        )\n",
-    "- oldpeak               (   \n",
-    "                            depression -- numeric value\n",
-    "                        )\n",
-    "- ST slope              (\n",
-    "                            1 -> upsloping\n",
-    "                            2 -> flat\n",
-    "                            3 -> Downsloping\n",
-    "                        )\n",
-    "- target                (\n",
-    "                            1 -> heart disease\n",
-    "                            0 -> normal\n",
-    "                        )\n",
+    "Tenemos en el dataset casi 1200 entradas de pacientes con o sin enfermedades cardiacas dependiento de una serie de características que podemos observar leyendo las columnas. Al final del dataset encontramos la columna target con valores 0 y 1, esto nos indica que es un problema de clasificación binaria, o están malos o no.\n",
     "\n",
-    "Using these data, we can make a predictor using the TabFPNClassifier model. It's quite better than the CNN Baseline and it's very fast because it's pre-entrained to classify up to 10 classes, 100 different features and 1000 train data points.\n",
+    "Observando el dataset vamos a crear un clasificador usando el algoritmo TabPFN. Es mejor que una Baseline usando un NN y mucho más rápido al estar preentrenado. Además cumplimos todas las condiciones para poder usarlo.\n",
     "\n",
-    "The best of this Classifier is that we just have to split the data into training and testing datasets. The model encodes and preprocess the data using it's own methods to have a good performance."
+    "Un punto bueno de este clasificador es que únicamente tenemos que hacer un split en datos de entrenamiento y testing y el propio TabPFN se encarga de procesar las columnas así como de hacer los encoders que sean necesarios."
    ]
   },
   {
@@ -302,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>It's VERY IMPORTANT</b> to see that we have less than 10 classes, 100 features and 1000 training points due to method limitations "
+    "Es **MUY IMPORTANTE** que cumplamos que tenemos menos de 10 clases a diferentes, menos de 100 características y menos de 1000 puntos de entrenamiento."
    ]
   },
   {
@@ -348,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look that in less then 2 seconds we made a more than 93% accuracy predictor for heart disease. It's not recommended just use it but it's for consulting purposes and take another point of view."
+    "Como podemos observar, en menos de 2 segundos tenemos un clasificador con más de un 93% de accuracy para este dataset. No lo usaría como modelo definitivo pero si lo podemos marcar como una baseline o para comparación con otros modelos."
    ]
   }
  ],
