dataset esclerosis múltiple con transformers -WORK --CONTROL-COMMIT

--- a/TRANSFORMER-MULTIPLE_SCLEROSIS/multiplesclerosis.ipynb
+++ b/TRANSFORMER-MULTIPLE_SCLEROSIS/multiplesclerosis.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problema clasificación Esclerosis múltiple usando el algoritmo transformer TabTFN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El dataset lo podemos encontrar en kaggle en este enlace --> <a href=\"https://www.kaggle.com/datasets/desalegngeb/conversion-predictors-of-cis-to-multiple-sclerosis\">Multiple Sclerosis Disease</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -309,15 +323,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To know if we can use the TabPFNClassifier, we should look on:\n",
-    "- Delete the id's row we have as 'Unnamed: 0' column\n",
-    "- Check the number of samples we have, we have 273\n",
-    "- Check the nunber of target, we have 2 {1, 2}\n",
+    "Para saber si podemos o no usar el clasificador de TabPFN tenemos que fijarnos en:\n",
+    "- (1) Eliminar la columna de id que tenemos como 'Unnamed 0'\n",
+    "- (2) Comprobar que tenemos el correcto número de muestras ( 273 < 1000 )\n",
+    "- (3) Comprobar que tenemos menos de 10 clases a clasificar (2 < 10)\n",
     "\n",
-    "Once we checked all we have finished our preprocessing task so we can use the TabPFNClassifier. This algorithm can make a predictor from raw tabular data hence we checked the requirements:\n",
-    "- Less than 1000 train samples ( our dataset is already less than that )\n",
-    "- Less than 100 different features ( our has 20 without 'Unnamed: 0' column )\n",
-    "- Less than 10 different classes ( our has only 2 )"
+    "Una vez comprobado todo esto podemos pasar al preprocesado pertinente y a ejecutar el algoritmo."
    ]
   },
   {
@@ -388,7 +399,7 @@
     }
    ],
    "source": [
-    "# Split data in 'data' and 'labels'\n",
+    "# Separamos el dataset en datos y target\n",
     "X = dataset.drop('group', axis=1)\n",
     "y = dataset['group']\n",
     "X.shape, y.shape"
@@ -411,7 +422,7 @@
     }
    ],
    "source": [
-    "# Split the dataset in training and testing groups (0,85 training size)\n",
+    "# Hacemos un split de datos en entrenamiento y testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.85, shuffle=True)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
@@ -471,9 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I put shuffle flag on true and no random_seed cause i want to repeat the trainig and predicction task cause i want to prove that the algorithm works correctly with tabular data\n",
+    "Como podemos ver, en menos de 3 segundos hemos sacado un clasificador con una accuracy superior al 97% y con un valor de AUC superior al .97.\n",
     "\n",
-    "Now i'm going to make a for loop to test it over the loop and make a mean of the results to see if it was just luck or it's a very good classifier algorithm"
+    "He colocado en el split el argumento suffle como **True** para poder simular una cross validation repitiendo la partición y sacando una media de como de bien funciona el algoritmo."
    ]
   },
   {
@@ -666,6 +677,13 @@
     "    acc_score_list.append( accuracy_score( y_pred, y_test) )\n",
     "    #\n",
     "print(f\"We got :\\n\\t · An avg AUC: {np.mean(roc_score_list):.4f}\\n\\t · An avg Accuracy: {np.mean(acc_score_list):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como media tenemos que nuestro clasificador tiene tanto para la accuracy como para el AUC por encima de 0.95. Son muy buenos valores pero estamos muy limitados por el modelo para usarlo libremente."
    ]
   }
  ],
