dataset Wine-Quality transformers completo y comentarios arreglados -WORK --CONTROL-COMMIT

--- a/TRANSFORMER-WINE_QUALITY/TabTransformer-WineQuality.ipynb
+++ b/TRANSFORMER-WINE_QUALITY/TabTransformer-WineQuality.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alejandro/Documents/Repositorios/alejandromadrid/.python-transformer-venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
@@ -19,10 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset i'll use is in the following url \n",
-    "<a>http://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv</a>\n",
+    "Podemos encontrar el dataset en kaggle, consultar la siguiente dirección --> <a href=\"https://www.kaggle.com/datasets/uciml/red-wine-quality-cortez-et-al-2009\"> Red Wine Quality </a>\n",
     "\n",
-    "I have it downloaded in Assets/Datasets/CSV/WineQuality/winequality-red.csv"
+    "Debido al fracaso del algoritmo TabPFN. ahora vamos a probar con el algoritmo transformer TabTransformer"
    ]
   },
   {
@@ -325,6 +333,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquí definimos el modelo TabTransformer de Aravind Koli en <a href=\"medium.com\"> Medium </a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -351,23 +366,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 2.0367\n",
-      "Epoch: 10, Loss: 1.0141\n",
-      "Epoch: 20, Loss: 0.9610\n",
-      "Epoch: 30, Loss: 0.9352\n",
-      "Epoch: 40, Loss: 0.9058\n",
-      "Epoch: 50, Loss: 0.8742\n",
-      "Epoch: 60, Loss: 0.8515\n",
-      "Epoch: 70, Loss: 0.8213\n",
-      "Epoch: 80, Loss: 0.7623\n",
-      "Epoch: 90, Loss: 0.7405\n"
+      "Epoch: 0, Loss: 2.0660\n",
+      "Epoch: 10, Loss: 1.0087\n",
+      "Epoch: 20, Loss: 0.9643\n",
+      "Epoch: 30, Loss: 0.9317\n",
+      "Epoch: 40, Loss: 0.9115\n",
+      "Epoch: 50, Loss: 0.8859\n",
+      "Epoch: 60, Loss: 0.8597\n",
+      "Epoch: 70, Loss: 0.8356\n",
+      "Epoch: 80, Loss: 0.7909\n",
+      "Epoch: 90, Loss: 0.7386\n"
      ]
     }
    ],
@@ -395,14 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.6416666507720947\n"
+      "Test Accuracy: 0.6229166388511658\n"
      ]
     }
    ],
@@ -417,6 +432,82 @@
     "    _, predicted_classes = torch.max(predictions, 1)\n",
     "    accuracy = (predicted_classes == y_test_tensor).float().mean()\n",
     "    print(f'Test Accuracy: {accuracy.item()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Después de haber ejecutado 100 épocas no ha sido relevante y hemos tenido una accuracy de apenas 64%, menos de un punto por encima de la baseline planteada en 63%.\n",
+    "\n",
+    "Voy a probar con más épocas a ver que ocurre."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0, Loss: 1.8221\n",
+      "Epoch: 100, Loss: 0.6431\n",
+      "Epoch: 200, Loss: 0.1934\n",
+      "Epoch: 300, Loss: 0.0434\n",
+      "Epoch: 400, Loss: 0.0326\n",
+      "Epoch: 500, Loss: 0.0219\n",
+      "Epoch: 600, Loss: 0.0215\n",
+      "Epoch: 700, Loss: 0.0154\n",
+      "Epoch: 800, Loss: 0.0287\n",
+      "Epoch: 900, Loss: 0.0116\n",
+      "Test Accuracy: 0.6333333253860474\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we initialize the model, loss and optimizer\n",
+    "model = TabTransformer(num_features=X_train.shape[1], num_classes=6).to(torch.device('cuda' if torch.cuda.is_available() else 'cpu'))\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=.001)\n",
+    "\n",
+    "# Converting data to tensors\n",
+    "X_train_tensor = torch.FloatTensor(X_train)\n",
+    "y_train_tensor = torch.LongTensor(y_train.values)\n",
+    "\n",
+    "# Training loop \n",
+    "for epoch in range(1000):\n",
+    "    optimizer.zero_grad()\n",
+    "    output = model(X_train_tensor)\n",
+    "    loss = loss_fn(output, y_train_tensor)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"Epoch: {epoch}, Loss: {loss.item():.4f}\")\n",
+    "        \n",
+    "        # Evaluation\n",
+    "model.eval()\n",
+    "X_test_tensor = torch.FloatTensor(X_test)\n",
+    "y_test_tensor = torch.LongTensor(y_test.values)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    predictions = model(X_test_tensor)\n",
+    "    _, predicted_classes = torch.max(predictions, 1)\n",
+    "    accuracy = (predicted_classes == y_test_tensor).float().mean()\n",
+    "    print(f'Test Accuracy: {accuracy.item()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "He probado desde las 100 a las 1000 épocas y nada, para este dataset pueden ocurrir dos cosas:\n",
+    "- (1) El uso de algoritmos transformer no está siendo el más indicado y deberíamos afrontar el problema de otra manera\n",
+    "- (2) Debería probar más algoritmos transformer por si únicamente estos dos fallan\n",
+    "\n",
+    "Opto por la primera por que los algoritmos más simples son los que he usado y el resto serían una GrowNet que para este tamaño no va a resulta últil o un FTTransformer que tampoco va a ser resolutivo ya que no tenemos columnas que transformar de la manera en que lo hace."
    ]
   }
  ],
@@ -436,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
