--- a/TRANSFORMER-WINE_QUALITY/wineQuality-TabPFN.ipynb
+++ b/TRANSFORMER-WINE_QUALITY/wineQuality-TabPFN.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clasificador de Calidad de Vino usando TabPFN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -13,6 +20,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "#\n",
     "from tabpfn import TabPFNClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al ver la forma y tamaño del dataset pensé en marcar una baseline usando TabPFN ya que tendría que partir el dataset en 70 30 para que este sea capaz de funcionar debido a sus restricciones."
    ]
   },
   {
@@ -253,6 +267,13 @@
     "# Como tenemos menos de 10 clases podemos pasar directamente a separar\n",
     "X_train, X_test, y_train, y_test = train_test_split(dataset.drop('quality', axis=1),dataset['quality'] , random_state=33, train_size=0.64)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Haciendo estos splits podemos pasar a usar TabPFN con el número de muestras rozando el límite."
    ]
   },
   {
@@ -708,6 +729,15 @@
    "source": [
     "y_eval, p_eval = clasificador.predict(X_test, return_winning_probability=True)\n",
     "print(f'Accuracy : {accuracy_score(y_test, y_eval)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El resultado no ha sido muy relevante así como decisivo ya que un 63% de accuracy es un valor muy bajo. \n",
+    "\n",
+    "Dado este resultado voy a marcarlo como baseline y voy a tratarlo con el algoritmo transformer TabTransformer en el otro fichero del directorio."
    ]
   }
  ],
